# VpnProxy

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: dns.rs  lib.rs  main.rs  socks.rs  util.rs
src/wg/: mod.rs  port_pool.rs  virtual_device.rs  virtual_interface.rs  virtual_socket.rs
