[package]
name = "vpn_proxy"
version = "0.1.0"
edition = "2021"


[dependencies]
pretty_env_logger = "0"
log = "0"

thiserror = "1"
serde = { version = "1", features = ["derive"] }
dashmap = "5"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
reqwest = { version = "0", features = ["rustls-tls", "gzip", "json"] }

[profile.dev.package."*"]
opt-level = 3
debug = true

[profile.dev]
opt-level = 1
debug = true

[profile.release]
lto = true
codegen-units = 1