[package]
name = "vpn_proxy"
version = "0.1.0"
edition = "2021"


[dependencies]
pretty_env_logger = "0"
log = "0"

thiserror = "1"
serde = { version = "1", features = ["derive"] }
dashmap = "5"

futures-util = "0"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
reqwest = { version = "0", default-features = false, features = ["rustls-tls", "gzip", "json"] }

rand = "0.8"
boringtun = "0.5"
wireguard-keys = "0.1"
x25519-dalek = "2.0.0-pre.1"
smoltcp = { version = "0.9", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp"] }

[profile.dev.package."*"]
opt-level = 3
debug = true

[profile.dev]
opt-level = 1
debug = true

[profile.release]
lto = true
codegen-units = 1